--- a/ssm/src/main/resources/templet/IbatisCode.vm
+++ b/ssm/src/main/resources/templet/IbatisCode.vm
@@ -1,4 +1,4 @@
-#set($pojoName="${pojoPkg}.newtg.pojo.${nameUtil.pasical($table.name)}.${nameUtil.firstUpperPasical($table.name)}")
+#set($pojoName="${pojoPkg}.tgoms.pojo.${nameUtil.pasical($table.name)}.${nameUtil.firstUpperPasical($table.name)}")
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" "http://mybatis.org/dtd/mybatis-3-mapper.dtd" >
 <mapper namespace="$pojoName">
@@ -14,11 +14,10 @@
 #end
 </sql>
 
-<select id="findAll" resultMap="BaseResultMap" parameterType="util.db.query.Query" >
+<select id="findLimit" resultMap="BaseResultMap" parameterType="com.tg.db.common.Limit" >
 	select 
 	<include refid="cols" />
-	from $table.name t
-	<include refid="sql.page"></include>
+	from $table.name t limit #{limitStart},#{limitEnd}
 </select>
 
 <select id="get" resultMap="BaseResultMap" parameterType="#if($table.singlePk==true)Object#else${pojoName}#end">
@@ -35,4 +34,20 @@
 	#end
 	
 </select>
+
+<insert id="insert" parameterType="$pojoName">
+	insert into $table.name (
+#set($cnt=1)
+#foreach($col in $table.columns)
+	#if($cnt>1),#end $col.name
+	#set($cnt=$cnt+1)
+#end
+	)values(
+#set($cnt=1)
+#foreach($col in $table.columns)
+	#if($cnt>1),#end #{${nameUtil.pasical($col.name)}}
+	#set($cnt=$cnt+1)
+#end
+)
+</insert>
 </mapper>
